Fixed landscape on iPhone X & updated calendar

--- a/src/styles/_page-layout.scss
+++ b/src/styles/_page-layout.scss
@@ -1,3 +1,7 @@
+html {
+    padding: env(safe-area-inset);
+}
+
 .container {
     @include for-phone-only {
         width: 100%;
